# co-scientist-video-harness

./: .gitignore  README.md  pyproject.toml
tests/: test_clip_guard.py  test_lang.py  test_mux.py  test_news_anchor.py  test_overlay.py  test_rank_race.py  test_refs_card.py  test_style_gallery.py  test_workdir.py
vh/: __init__.py  cli.py  config.py  pipeline.py  probe.py  refs_card.py  remote.py  style_gallery.py
vh/assets/: __init__.py  style_catalog_base.json
vh/steps/: __init__.py  caption.py  chapters.py  clean.py  compose.py  dub.py  gpu_asr.py  news.py  rank_race.py  recut.py  reframe.py  titlecards.py  transcribe.py
