[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-harness"
version = "0.1.0"
description = "Headless recording -> publish-ready YouTube long-form / vertical Shorts (ffmpeg + Whisper, no CapCut)"
requires-python = ">=3.10"
# faster-whisper drives the CPU transcription backend. The GPU backend shells out
# to a separate interpreter (transformers/torch on the GB10, or faster-whisper on
# an x86_64 render host) so it is intentionally NOT a hard dependency here.
# ffmpeg + ffprobe must be on PATH (or pointed at via VH_FFMPEG / VH_FFPROBE).
dependencies = [
    "faster-whisper>=1.0",
    # Core render deps: vh.steps.rank_race (pixel power-diagram solver) and
    # vh.style_gallery (thumbnail placeholders) need numpy + Pillow at runtime,
    # so they are hard dependencies (numpy is ALSO in the gpu extra for torch).
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
# GPU transcription via transformers Whisper (used on aarch64 where CTranslate2
# has no CUDA wheel). torch must match the platform/CUDA build.
gpu = ["transformers>=4.40", "numpy"]

[project.scripts]
# Console entry point -> `vh run <file> --preset ...`, `vh presets`
vh = "vh.cli:main"

[tool.setuptools]
packages = ["vh", "vh.steps", "vh.assets"]

# Ship the packaged base style catalog (vh/assets/*.json) inside the wheel —
# vh.style_gallery loads it via importlib.resources("vh.assets").
[tool.setuptools.package-data]
"vh.assets" = ["*.json"]
